@@ -1,6 +1,8 @@
 1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* gui.h (_ScheduleItem): Add trigger:X:Y:.
+	(_CompleteProbeDisplayLabel): Remove setProbeDisplayManager: and
+	rename setProbeDisplay: to setTargetWidget:.
 
 1998-09-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
